--- a/tran.css
+++ b/tran.css
@@ -6,13 +6,15 @@
     max-width: 100%;
     /* margin: auto; */
     height: 80px;
-    background-color: rgb(52, 52, 153);
+    /* background-color: rgb(52, 52, 153); */
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("m.jpg");
+    background-color: transparent;
     color: black;
 }
 
 .logo img{
     float: left;
-    width: 125px;
+    width: 150px;
     height: 80px;
     margin: 0px;
     background-color: blue;
@@ -226,6 +228,8 @@ header{
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(HomePageImg1.jpg);
     height: 100vh;
     background-size: cover;
+    width: 100%;
+    /* height: auto; */
     background-position: center;
 }
 
